--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,5 +4,11 @@ jobs:
   Testing:
     runs on : ubuntu-latest
     steps: 
-      - name: Testing workflow
-        run : echo "workflow works!"
+      - name: code checkout
+        uses : action/checkout@v4
+
+      - name : Maven test 
+        run : mvn test
+
+      - name : checkstyle
+        run : mvn checkstyle:checkstyle
