mvn code analysis in workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
-name: Hprofile Action 
-on : workflow_dispatch
-jobs: 
+name: Hprofile Actions
+on: workflow_dispatch
+jobs:
   Testing:
-    runs on : ubuntu-latest
-    steps: 
-      - name: code checkout
-        uses : action/checkout@v4
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
 
-      - name : Maven test 
-        run : mvn test
+      - name: Maven test
+        run: mvn test
 
-      - name : checkstyle
-        run : mvn checkstyle:checkstyle
+      - name: Checkstyle
+        run: mvn checkstyle:checkstyle
